ingress/nemo-evaluator/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nemo-evaluator-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nemo-evaluator.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nemo-evaluator
                port:
                  number: 7331
